--- a/modules/artifacts/client/views/artifact-display.html
+++ b/modules/artifacts/client/views/artifact-display.html
@@ -2,24 +2,24 @@
 
     <!-- This section gets displayed if the content is a document: Individual VC's are now part of this. -->
 
-    <!-- MAIN DOCUMENT -->
+    <!-- MAIN DOCUMENT PANEL -->
     <section>
-        <div class="panel panel-default">
+        <div class="document-panel panel panel-default">
             <div class="panel-heading clearfix">
-                <h2 class="pull-left">Main Document</h2>
-                <a class="btn btn-default btn-sm pull-right"
+                <h2>Main Document</h2>
+                <a class="link-file-btn btn btn-primary btn-sm"
                     ng-if="mode === 'edit'"
                     x-modal-document-link
                     x-current="artifact.maindocument"
                     x-project="project"
-                    href>+/- Link Document</a>
+                    href><span class="glyphicon glyphicon-link"></span><span>Link Document<span></a>
             </div>
             
             <div class="attachments">
                 <div class="list-group no-border">
                     <div class="list-group-item" ng-if="!artifact.document._id">
                         <span class="file-name no-files">
-                            <span ng-if="!artifact.document._id">No file available for {{ artifact.name }} ({{ artifact.version }} {{ artifact.stage }})</span>
+                            <span ng-if="!artifact.document._id">No file available.</span>
                         </span>
                     </div>
                     <a class="list-group-item" ng-if="artifact.document._id" href="/api/document/{{ artifact.document._id }}/fetch" target="_blank" title="Download file">
@@ -86,11 +86,7 @@
 </div>
 
 <div ng-if="artifact.isTemplate">
-    <!--
-
-		This section gets displayed if the content is a template
-
-	 -->
+    <!-- This section gets displayed if the content is a template -->
     <div class="row">
 
         <div class="col-sm-12">
