--- a/modules/documents/client/views/documents.html
+++ b/modules/documents/client/views/documents.html
@@ -14,14 +14,18 @@
 			class="anchor-section"
 			id="anchor-documents"
 			x-approvals="false"
-			x-project="project">
+			x-project="project"
+      x-artifact="artifact"
+      x-doc-location-code="main">
 		</tmpl-documents-browser>
 
 		<tmpl-documents-approvals
 			class="anchor-section hidden"
 			id="anchor-document-approvals"
 			x-approvals="true"
-			x-project="project">
+			x-project="project"
+      x-artifact="artifact"
+      x-doc-location-code="main">
 		</tmpl-documents-approvals>
 	</div>
 
