--- a/modules/documents/client/views/partials/document-link.html
+++ b/modules/documents/client/views/partials/document-link.html
@@ -1,6 +1,8 @@
 <tmpl-documents-browser
 	x-approvals="false"
 	x-project="docLink.project"
+  x-artifact="docLink.artifact"
+  x-doc-location-code="{{docLink.docLocationCode}}"
 	x-allow-link='true'>
 </tmpl-documents-browser>
 
@@ -31,6 +33,6 @@
 					</tbody>
 				</table>
 			</div>
-
 		</div>
-	</d
+	</div>
+</div>
