--- a/modules/documents/client/views/partials/modal-document-link.html
+++ b/modules/documents/client/views/partials/modal-document-link.html
@@ -1,4 +1,4 @@
-<tmpl-documents-link x-current="docLinkModal.current" x-project="docLinkModal.project" x-type="project"></tmpl-documents-link>
+<tmpl-documents-link x-current="docLinkModal.current" x-project="docLinkModal.project" x-type="project" x-doc-location-code="docLinkModal.docLocationCode" x-artifact="docLinkModal.artifact"></tmpl-documents-link>
 <div class="modal-footer">
 	<button class="btn btn-default" type="button" ng-click="docLinkModal.cancel()">Cancel</button>
 	<button class="btn btn-default" type="button" ng-click="docLinkModal.ok()">Save</button>
