--- a/modules/documents/client/views/partials/modal-document-upload-review.html
+++ b/modules/documents/client/views/partials/modal-document-upload-review.html
@@ -2,7 +2,7 @@
 	<h3 class="modal-title">Project Documents for Review</h3>
 </div>
 <div class="modal-body">
-	<tmpl-documents-upload-classify x-project="docUploadModalReview.project" x-type="project"></tmpl-documents-upload-classify>
+	<tmpl-documents-upload-classify x-project="docUploadModalReview.project" x-type="project" x-artifact="docUploadModalReview.artifact"></tmpl-documents-upload-classify>
 </div>
 <div class="modal-footer">
 	<button class="btn btn-default" type="button" ng-click="docUploadModalReview.cancel()">Cancel</button>
