--- a/modules/documents/client/views/partials/modal-document-upload-classify-mem.html
+++ b/modules/documents/client/views/partials/modal-document-upload-classify-mem.html
@@ -2,7 +2,7 @@
 	<h3 class="modal-title">Project Documents</h3>
 </div>
 <div class="modal-body">
-	<tmpl-documents-upload-classify-mem x-project="docUploadModal.project" x-type="project"></tmpl-documents-upload-classify-mem>
+	<tmpl-documents-upload-classify-mem x-project="docUploadModal.project" x-type="project" x-artifact="artifact"></tmpl-documents-upload-classify-mem>
 </div>
 <div class="modal-footer">
 	<button class="btn btn-default" type="button" ng-click="docUploadModal.cancel()">Cancel</button>
