--- a/modules/templates/client/views/template-document-editor.html
+++ b/modules/templates/client/views/template-document-editor.html
@@ -3,12 +3,12 @@
 <div class="document-panel panel panel-default">
     <div class="panel-heading clearfix">
         <h2>{{ ::title }}</h2>
-        <a class="link-file-btn btn btn-primary btn-sm" ng-if="editable" href x-modal-document-link x-current="curVal" x-project="project">
+        <a class="link-file-btn btn btn-primary btn-sm" ng-if="editable" href x-modal-document-link x-current="curVal" x-project="project" x-doc-location-code="docLocationCode" x-artifact="artifact">
             <span class="glyphicon glyphicon-link"></span><span>Link Document<span>
         </a>
     </div>
     <div class="attachments">
-        <div class="list-group no-border"> 
+        <div class="list-group no-border">
             <div class="list-group-item" ng-if="filelist.length == 0">
                 <span class="file-name no-files">No files available.</span>
             </div>
