Adding concept of documentSource (COMMENT documents).  Implement uploads to comments and store them in document model. Prevent the main document browser from showing comment documents - they will be shown in another ui.

--- a/modules/documents/client/views/partials/document-browser.html
+++ b/modules/documents/client/views/partials/document-browser.html
@@ -163,6 +163,7 @@
 				<ul>
 					<li class="row-document clickable" ng-class="{'active btn-primary': filterSummary._id === doc._id}"
 						ng-click="docBrowser.filterSummary(doc)"
+						ng-hide="doc.documentSource === 'COMMENT'"
 						ng-repeat="doc in docBrowser.documentFiles | filter:filterLinage:true">
 						<span class="glyphicon glyphicon-file"></span>
 						{{ doc.internalOriginalName | removeExtension }}
