For document upload... if Artifact is specified, lock down the select list and change the caption.  If Document Type is specified, lock down the select list and change the caption.

--- a/modules/documents/client/views/documents.html
+++ b/modules/documents/client/views/documents.html
@@ -16,7 +16,7 @@
 			x-approvals="false"
 			x-project="project"
       x-artifact="artifact"
-      x-doc-location-code="main">
+      x-doc-location-code="">
 		</tmpl-documents-browser>
 
 		<tmpl-documents-approvals
@@ -25,7 +25,7 @@
 			x-approvals="true"
 			x-project="project"
       x-artifact="artifact"
-      x-doc-location-code="main">
+      x-doc-location-code="">
 		</tmpl-documents-approvals>
 	</div>
 
